--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
@@ -79,7 +79,7 @@ jobs:
         echo "### 📊 Build Info:" >> $GITHUB_STEP_SUMMARY
         echo "- **Commit**: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
         echo "- **Branch**: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Platforms**: linux/amd64, linux/arm64" >> $GITHUB_STEP_SUMMARY
+        echo "- **Platforms**: linux/amd64" >> $GITHUB_STEP_SUMMARY
         echo "- **Registry**: [GitHub Container Registry](https://github.com/${{ github.repository }}/pkgs/container/aws-s3-collector-garbage)" >> $GITHUB_STEP_SUMMARY
 
     - name: Test published image
