✨ Implementa variável PARAMS para compatibilidade total com imagem original
- Adiciona suporte à variável PARAMS em todos os comandos AWS CLI
- Inclui PARAMS no Dockerfile, scripts e documentação
- Atualiza exemplos docker-compose e .env.example
- Adiciona seção detalhada no README com exemplos de uso
- Mantém compatibilidade 100% com futurevision/aws-s3-sync
- Permite usar profiles AWS, endpoints customizados, etc.
- Testes confirmam que parâmetros são aplicados corretamente

Exemplos: --profile prod, --endpoint-url https://s3.custom.com

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -9,6 +9,11 @@ S3_BUCKET_PATH=/backups
 
 # Garbage Collection Settings
 BACKUP_RETENTION_DAYS=7
+
+# Parâmetros adicionais para AWS CLI (opcional)
+# Exemplos: "--profile production", "--endpoint-url https://s3.custom.com"
+PARAMS=
+
 DRY_RUN=false
 VERBOSE=true
 
