--- a/examples/docker-compose-one-shot.yml
+++ b/examples/docker-compose-one-shot.yml
@@ -18,6 +18,7 @@ services:
       
       # Garbage Collection Settings
       BACKUP_RETENTION_DAYS: ${BACKUP_RETENTION_DAYS:-7}
+      PARAMS: ${PARAMS:-}
       DRY_RUN: ${DRY_RUN:-false}
       VERBOSE: ${VERBOSE:-true}
     
